Fix Express checkout title padding not visible on npm run build

--- a/assets/js/base/components/payment-methods/style.scss
+++ b/assets/js/base/components/payment-methods/style.scss
@@ -20,6 +20,7 @@ $border-width: 1px;
 			border-radius: 5px 0 0 0;
 			content: "";
 			display: block;
+			margin-right: $gap-small;
 			pointer-events: none;
 			width: #{$gap-larger - $gap-small - $border-width * 2};
 		}
@@ -31,6 +32,7 @@ $border-width: 1px;
 			border-radius: 0 5px 0 0;
 			content: "";
 			display: block;
+			margin-left: $gap-small;
 			pointer-events: none;
 			flex-grow: 1;
 		}
@@ -38,8 +40,6 @@ $border-width: 1px;
 
 	.wc-block-components-express-checkout__title {
 		flex-grow: 0;
-		padding-left: $gap-small;
-		padding-right: $gap-small;
 		transform: translateY(-50%);
 	}
 
